tests/parser/bug_78/invalid_10.m.out
In invalid_10.m, line 4
| disp foo'( %
|         ^ lex error: this command form string is not terminated properly
MISS_HIT Summary: 1 file(s) analysed, 1 error(s)
